# discord-rust-music

./: docker-compose.yml  otel-collector-config.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
addr/src/: lib.rs
addr/tests/: integration_test.rs
app/: Cargo.toml
app/src/: commands.rs  main.rs  playlist.rs  rust_lang.rs
app/src/commands/: music.rs  test.rs  utility.rs
app/src/playlist/: playlist.rs  track.rs
