[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
dotenvy = "0.15.7"
opentelemetry = { version = "0.18.0", default-features = false, features = ["trace", "rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.11.0", default-features = false, features = ["grpc-tonic", "trace", "metrics"] }
opentelemetry_sdk = "0.24.1"
poise = "0.6.1"
rustube = "0.6.0"
rusty_ytdl = "0.7.4"
serenity ={version = "0.12.2", default-features=false,features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-opentelemetry = { version = "0.18.0", default-features = false, features = ["tracing-log", "metrics"] }
tracing-core = "0.1.32"
tracing-subscriber = {version="0.3.18",features=["chrono"]}
songbird = {version="0.4.3",features=["builtin-queue"]}
audiopus = "0.2.0"

[dependencies.symphonia]
version = "0.5.2"
features = ["aac", "mp3", "isomp4", "alac"]

[profile.dev]
incremental = true