[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
dotenvy = "0.15.7"
opentelemetry = { version = "0.18.0", default-features = false, features = ["trace", "rt-tokio", "metrics"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-opentelemetry = { version = "0.18.0", default-features = false, features = ["tracing-log", "metrics"] }
tracing-core = "0.1.32"
tracing-subscriber = {version="0.3.18",features=["chrono"]}

[profile.dev]
incremental = true